syntax = "proto3";

import "google/protobuf/wrappers.proto";

package server;

option go_package = "github.com/gotzmann/grpc";

service Products {
    rpc addProduct(Product) returns (ProductID);
    rpc getProductsByBrand(google.protobuf.StringValue) returns (ProductsResponse);
}

message Brand {
    int32 id = 1;
    string name = 2;
}

message Category {
    int32 id = 1;
    string name = 2;
}

message ProductID {
	int32 value = 1;
}

message Product {
    int32 id = 1;
    string name = 2;
    int32 brand_id = 3;
    int32 category_id = 4;
    int32 year = 5;
    double price = 6;
}

message ProductsResponse {
    repeated Product products = 1;
}
